src/test/deca/context/invalid/decaObjet/emptyClass/06print.deca
// Description:
//    test essayant d'afficher un objet
//
// Resultats:
//    02comparaison.deca:22:8:
//
// Historique:
//    cree le 13/06/2022

class A {

}

{
    A a = new A();
    println(a);
}